--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,49 @@
 <html>
-  <body>
-  <script>
-  var a = {{ content }}
-  </script>
-  <h1>Test</h1>
-  </body>
+	<head>
+	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	</head>
+	<body>
+	<div class="row">
+		<div class="col-md-4">
+		</div>
+		<div class="col-md-4">
+			<div class="well" style="overflow-y: scroll">
+			<ul class="list-group" id="docs">
+			</ul>
+			</div>
+			<div class="well">
+			<div id="bag">
+			</div>
+			</div>
+		</div>
+		<div class="col-md-4">
+		</div>
+	</div>
+	</body>
+	<script>
+		function getRandomInt(min, max) {
+			min = Math.ceil(min);
+			max = Math.floor(max);
+			return Math.floor(Math.random() * (max - min)) + min;
+		}
+		function severity(count){
+			var a = ['list-group-item-success',
+					'list-group-item-info',
+					'list-group-item-warning',
+					'list-group-item-danger'];
+			return a[count-1 % 4]
+		}
+		var docs = {{content|safe}};
+		for(var i = 0; i<docs.length; i++){
+			var headline = eval(docs[i].headline)[0];
+			var dat = docs[i].date;
+
+	  		$("#docs").append("<li class='list-group-item "+severity(getRandomInt(1,5))+"' onclick='bag("+i+")'>"+headline+"</li>");
+		}
+		function bag(id){
+			$("#bag").html(JSON.stringify(docs[id]))
+		}
+	</script>
 </html>
