--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pouchdb/5.4.5/pouchdb.min.js"></script>
 	</head>
 	<body>
 	<div class="row">
@@ -23,6 +24,7 @@
 	</div>
 	</body>
 	<script>
+		var db = new PouchDB('http://192.168.172.5:5984/huginn-events')
 		function getRandomInt(min, max) {
 			min = Math.ceil(min);
 			max = Math.floor(max);
@@ -39,11 +41,13 @@
 		for(var i = 0; i<docs.length; i++){
 			var headline = eval(docs[i].headline)[0];
 			var dat = docs[i].date;
-
-	  		$("#docs").append("<li class='list-group-item "+severity(getRandomInt(1,5))+"' onclick='bag("+i+")'>"+headline+"</li>");
+			var id = docs[i]['couch_id']
+	  		$("#docs").append('<li class="list-group-item '+severity(getRandomInt(1,5))+'" onclick="bag('+id.substr(2,id.length-3)+')">'+headline+'</li>');
 		}
 		function bag(id){
-			$("#bag").html(JSON.stringify(docs[id]))
+			db.get(id, function(err,doc){
+				$("#bag").html(doc.content)
+			})
 		}
 	</script>
 </html>
